PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2006, PHP 5.2.0
- Removed ze1 compatibility mode. (Marcus)
- Added support for constructors in interfaces to force constructor signature
  checks in implementations. (Marcus)
- Changed __toString to be called whereever applicable. (Marcus)
- Improved SPL: (Marcus)
  . Added RegExIterator and RecursiveRegExIterator
  . Added full caching support and ArrayAccess to CachingIterator.
  . Added array functions to ArrayObject/ArrayIterator and made them faster.
  . Added support for reading csv and skipping empty lines in SplFileObject.
- Added run-time configurable backtracking/recursion limits for PCRE. (Andrei)
- Added preg_last_error(). (Andrei)
- Added support for Apache 2.2 handler in the Windows distro. (Edin)
- Added pg_field_table() function. (Edin)
- Add implementation of curl_multi_info_read (Brian)
- Fixed bug #37394 (substr_compare() returns an error when offset equals 
  string length). (Ilia)
- Fixed bug #37392 (Unnecessary call to OCITransRollback() at the end of 
  request). (Tony)
- Fixed bug #37376 (fastcgi.c compile fail with gcc 2.95.4). (Ilia)
- Fixed bug #37348 (make PEAR install ignore open_basedir). (Ilia)
- Fixed bug #37313 (sigemptyset() used without including <signal.h>).
  (jdolecek)
- Fixed bug #37244 (Added strict flag to base64_decode() that enforces 
  RFC3548 compliance). (Ilia)

04 May 2006, PHP 5.1.4
- Added "capture_peer_cert" and "capture_peer_cert_chain" context options
  for SSL streams. (Wez).
- Added PDO::PARAM_EVT_* family of constants. (Sara)
- Fixed possible crash in highlight_string(). (Dmitry)
- Fixed bug #37291 (FastCGI now longer works with isapi_fcgi.dll). (Dmitry)
- Fixed bug #37277 (cloning Dom Documents or Nodes does not work). (Rob)
- Fixed bug #37276 (problems with $_POST array). (Dmitry)